--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Section2End">
+        
+    <wb-module deploy-name="Section2Project3">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Section2End"/>
-        <property name="java-output-path" value="/Section2End/build/classes"/>
+                
+        <property name="java-output-path" value="/Section2Project3/build/classes"/>
+        <property name="context-root" value="Section2Project3"/>
+            
     </wb-module>
+    
 </project-modules>
